# mouse_client_server

./: .gitignore  CMakeLists.txt  build.cmd
head/: strdonn.h
src/: client.c  server.c
